Fix align

--- a/06/hw-menu/hw06-menu.css
+++ b/06/hw-menu/hw06-menu.css
@@ -66,6 +66,7 @@
 .foodcart{
     display: flex;
     flex-direction: column;
+    row-gap: 12px;
 }
 .burger{
     display: flex;
@@ -73,13 +74,18 @@
     box-shadow: 0px 0px 4px 0px rgb(230, 230, 230);
     background: rgb(255, 255, 255);
     font-size: 16px;
-    margin-bottom: 12px; 
     padding: 12px;
     width: 316px;
     min-height: 88px;
+    align-items: center;
+    column-gap: 14px;
+}
+.burger.fish{
+    column-gap: 1px;
 }
 .redt{
     color: rgb(214, 40, 40);
     font-size: 14px;
     text-align: left;
+    margin-bottom: 0;
 }
